// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
}

.emotion-3 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-6,
.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-6,
.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-3[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-3[data-size='small'] {
  height: 2rem;
}

.emotion-3[data-size='medium'] {
  height: 2.5rem;
}

.emotion-3[data-size='large'] {
  height: 3rem;
}

.emotion-3[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-3[data-success='true']>.emotion-6 {
  border-right-color: #22674e;
}

.emotion-3[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-3[data-success='true']:active>.emotion-6 {
  border-right-color: #22674e;
}

.emotion-3[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-3[data-error='true']>.emotion-6 {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']>.emotion-6:hover {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-3[data-error='true']:active>.emotion-6 {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']:active>.emotion-6:hover {
  border-right-color: #b3144d;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-3[data-disabled='true']>.emotion-6 {
  border-right-color: #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
}

.emotion-7[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-7[data-size="large"] {
  font-size: 1rem;
}

.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-7::placeholder {
  color: #727683;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-10 {
  width: 100%;
  width: 12.6rem;
}

.emotion-10 #unit {
  border: none;
  background: transparent;
}

.emotion-10 #unit:focus,
.emotion-10 #unit:active {
  box-shadow: none;
}

.emotion-12 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-12[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-12[data-size='medium'] {
  height: 2.5rem;
}

.emotion-12[data-size='large'] {
  height: 3rem;
}

.emotion-12[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-12[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-12[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-12[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-12[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-12[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-12[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-12[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-12[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-12[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-12:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-12[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-12[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-14 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-16 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <div
          class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
        >
          <label
            class="emotion-0 emotion-1 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            for="«r7»"
          >
            Test
          </label>
          <span
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            *
          </span>
        </div>
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div
            class="emotion-5 emotion-6"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-7 emotion-8"
              data-size="large"
              data-testid="unit-input"
              id="«r7»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-9 emotion-10 emotion-11"
          >
            <div
              aria-controls="«rb»"
              aria-describedby="«rb»"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
              >
                <div
                  aria-controls="«rb»"
                  aria-expanded="false"
                  class="emotion-12 emotion-13"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <div
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    Days
                  </div>
                  <div
                    class="emotion-16 emotion-17 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
                    style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_2__1sbwqkzm"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UnitInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
}

.emotion-3 {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  width: 100%;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus,
.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus>.emotion-6,
.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):active>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within {
  border-color: #792dd4;
}

.emotion-3:not([data-disabled='true']):not([data-readonly='true']):not(
      [data-success='true']
    ):not([data-error='true']):focus-within>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover,
.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #8c40ef;
}

.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):not([data-readonly='true']):hover>.emotion-6,
.emotion-3:not([data-disabled='true']):not([data-error='true']):not(
      [data-success='true']
    ):focus>.emotion-6 {
  border-right-color: #8c40ef;
}

.emotion-3[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-3[data-readonly='true']:active {
  border-color: #d9dadd;
}

.emotion-3[data-size='small'] {
  height: 2rem;
}

.emotion-3[data-size='medium'] {
  height: 2.5rem;
}

.emotion-3[data-size='large'] {
  height: 3rem;
}

.emotion-3[data-success='true'] {
  border: 1px solid #22674e;
}

.emotion-3[data-success='true']>.emotion-6 {
  border-right-color: #22674e;
}

.emotion-3[data-success='true']:active {
  border: 1px solid #22674e;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-3[data-success='true']:active>.emotion-6 {
  border-right-color: #22674e;
}

.emotion-3[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-3[data-error='true']>.emotion-6 {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']>.emotion-6:hover {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']:active {
  border: 1px solid #b3144d;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-3[data-error='true']:active>.emotion-6 {
  border-right-color: #b3144d;
}

.emotion-3[data-error='true']:active>.emotion-6:hover {
  border-right-color: #b3144d;
}

.emotion-3[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-3[data-disabled='true']>.emotion-6 {
  border-right-color: #e9eaeb;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 1rem;
  border-right: 1px solid #d9dadd;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  color: #3f4250;
}

.emotion-7[data-size="small"] {
  padding-left: 0.5rem;
}

.emotion-7[data-size="large"] {
  font-size: 1rem;
}

.emotion-7::-webkit-input-placeholder {
  color: #727683;
}

.emotion-7::-moz-placeholder {
  color: #727683;
}

.emotion-7:-ms-input-placeholder {
  color: #727683;
}

.emotion-7::placeholder {
  color: #727683;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-7:disabled::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-7:disabled::placeholder {
  color: #b5b7bd;
}

.emotion-10 {
  width: 100%;
  width: 12.6rem;
}

.emotion-10 #unit {
  border: none;
  background: transparent;
}

.emotion-10 #unit:focus,
.emotion-10 #unit:active {
  box-shadow: none;
}

.emotion-12 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-12[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-12[data-size='medium'] {
  height: 2.5rem;
}

.emotion-12[data-size='large'] {
  height: 3rem;
}

.emotion-12[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-12[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-12[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-12[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-12[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-12[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-12[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-12[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-12[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-12[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-12:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-12[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-12[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-16 {
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
        style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
      >
        <label
          class="emotion-0 emotion-1 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div
            class="emotion-5 emotion-6"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="emotion-7 emotion-8"
              data-size="large"
              data-testid="unit-input"
              id="«r0»"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
          <div
            aria-label="test-unit"
            class="emotion-9 emotion-10 emotion-11"
          >
            <div
              aria-controls="«r3»"
              aria-describedby="«r3»"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
                style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
              >
                <div
                  aria-controls="«r3»"
                  aria-expanded="false"
                  class="emotion-12 emotion-13"
                  data-disabled="false"
                  data-dropdownvisible="false"
                  data-readonly="false"
                  data-size="large"
                  data-state="neutral"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <p
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owl uv_m4c9owm uv_m4c9ow1b uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    Select item
                  </p>
                  <div
                    class="emotion-16 emotion-17 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u7 uv_toi52u5d"
                    style="--uv_4k0ekn0: var(--uv_4k0ekn0); --uv_4k0ekn1: var(--uv_4k0ekn1); --uv_4k0ekn2: var(--uv_4k0ekn2); --uv_4k0ekn3: var(--uv_4k0ekn3);"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_sentiment_neutral__1sbwqkz3 styles_size_small__1sbwqkza styles_undefined_compound_2__1sbwqkzm"
                      viewBox="0 0 16 16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
